[package]
name = "rleveldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.2.1"
crc = "3.0.0"
crc32fast = "1.3.2"
integer-encoding = "3.0.4"
lru = "0.8.1"
rand = "0.8.5"
snap = "1.0.5"
tempfile = "3.3.0"
thiserror = "1.0.37"
